removed transition background to fix flicker

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ body {
   line-height: 1.6;
   background-color: var(--background-body);
   color: var(--text-main);
-  transition: background-color 1s ease;
+  /* transition: background-color 1s ease; */
 }
 
 h1,
@@ -106,7 +106,7 @@ li p {
 
 a {
   color: inherit;
-  transition: color linear 1s;
+  /* transition: color linear 1s; */
 }
 
 a:hover {
@@ -116,8 +116,8 @@ a:hover {
 p a {
   text-decoration: none;
   box-shadow: inset 0 -0.12em 0 var(--primary-color);
-  -webkit-transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
-  transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+  -webkit-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
 
 p a:hover {
